Fixed footer alignment on all pages

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -3,7 +3,7 @@
 }
 .footer-align{
   position: absolute;
-  bottom: 0;
+  bottom: 1rem;
   font-family: 'Raleway', sans-serif;
   font-weight: 400;
   font-size: normal;
